# student-projects

./: .gitignore  README.md
2022-2023/: readme.md
2023-2024/: llm-trading.md  readme.md  student-projects - Shortcut.lnk
2023-2024/Jiaqi_Li/: .gitignore
2023-2024/Muhamad-Hermawan/: readme.md
2023-2024/Peining-Chen/: Requirement list.md  interview answers.md  interview questions  interview.md
2023-2024/hongye-an/: LLM-benchmark.md  README.md  project-idea.md  proposal.md
2023-2024/jianwen-lyu/: Interview_Jiang.docx  ProjectProposal.docx  article-reading.md  interview-Geat.md  interview.md  readme.md
2023-2024/jianwen-lyu/project-code/myextension/: .gitignore  Cats and Dogs in Cortex (Redux).ipynb  Disco_Diffusion_v5_2_Warp.ipynb  LICENSE  README.md  RELEASE.md  Titanic_Exploration.ipynb  UnivariateAnalysis.ipynb  Untitled.ipynb  kaggle_simple_exploration_notebook.ipynb  package.json  pyproject.toml
2023-2024/jianwen-lyu/project-code/myextension/.github/workflows/: build.yml  check-release.yml
2023-2024/jianwen-lyu/project-code/myextension/.virtual_documents/: Cats and Dogs in Cortex (Redux).ipynb  Cats_Vs_Dogs_Classification_85.ipynb  Disco_Diffusion_v5_2_Warp.ipynb  Titanic_Exploration.ipynb  UnivariateAnalysis.ipynb  Untitled.ipynb  kaggle_simple_exploration_notebook.ipynb
2023-2024/jianwen-lyu/project-code/myextension/myextension/: __init__.py
2023-2024/jianwen-lyu/project-code/myextension/src/: button.ts  code_option_menu.ts  extension_button.ts  graph_view.tsx  index.ts  model_component.ts  notes_area.ts  notes_area.tsx  notes_container.ts  option_menu.ts  popup.ts
2023-2024/jianwen-lyu/project-code/myextension/style/: base.css  index.css  model_component.css  notes.css  popup.css
2023-2024/jianwen-lyu/project-code/myextension/test_ipynb/: test.ipynb
2023-2024/jianwen-lyu/project-code/myextension/ui-tests/: package.json
2023-2024/jiaqi-li/: readme.md  requirement.md  user_interview.md
2023-2024/muhamad-hermawan/: readme.md
2023-summer/: Yu Hao  Yu Hao.md  readme.md
2024-2025/: readme.md
2025-2026/: readme.md
2025-summer/: readme.md
instructions/: 1-intro.md  2-writing.md  3-literature.md  4-proposal.md  6-requirements.md  8-software.md  9-evaluation.md  design.md  ethics.md  github.md  ide.md  intro.md  latex.md  literature.md  proposal.md  requirements.md  research-question.md  software.md  topic.md  topics.md
(+724 files in other folders)
